나중에 고치자

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class="container">
-        <span id="message">권재은 <span id="fighting">파이팅</span></span>
+        <input id="name-input" type="text" placeholder="이름을 입력하세요">
+        <span id="message"><span id="name">권재은</span> <span id="fighting">파이팅</span></span>
         <button id="fire-btn">🔥</button>
     </div>
     <script src="main.js"></script>
